[gd_scene load_steps=7 format=3 uid="uid://coobj8iogleq0"]

[ext_resource type="Script" path="res://Codigo/Player/menu_pausa.gd" id="1_g7wqp"]
[ext_resource type="Shader" path="res://Recursos/Shaders/menu_Pausa.gdshader" id="1_wfcsn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2tnxu"]
shader = ExtResource("1_wfcsn")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_h6xho"]
resource_name = "Blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wvb6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h03w7"]
_data = {
"Blur": SubResource("Animation_h6xho"),
"RESET": SubResource("Animation_wvb6o")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 63.0
offset_top = -17.0
offset_right = 63.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7wqp")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -912.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 3.9

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESTAR
"

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT
"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2tnxu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = 17.0
offset_right = -8.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h03w7")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
